--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
 
     <div id="footer_display">
-        <footer class="position-fixed bottom-0 start-0 end-0">
+        <footer class="position-fixed bottom-0 start-0 end-0 px-3">
             <div class="row px-3 px-2" style="font-size:14px">
                 <div class="col-sm-6 my-3 text-start">
                     <div class="mb-2">
@@ -66,8 +66,8 @@
                     <p class="mb-0"><span class="text-navy">Correo:</span> atencionalcddno.seta@gmail.com</p>
                 </div>
 
-                <div class="col-sm-6 mb-0 pb-0 d-flex align-items-end">
-                    <div class="d-flex pb-3 w-100 text-end align-items-center">
+                <div class="col-sm-6 mb-0 pb-0 d-flex justify-content-center align-items-end">
+                    <div class="d-flex pb-3 text-end align-items-center">
                         <img src="img/gobierno.png" alt="" class="ps-2" width="150px">
                         <img src="img/aragua.png" class="border-end ps-2 pe-2" alt="" width="85px">
                         <img src="img/logoKC.png" alt="" class="mt-3 ms-2" width="100px">
@@ -78,7 +78,7 @@
     </div>
 
     <div id="footer_display_none">
-        <footer class=" bottom-0 start-0 end-0">
+        <footer class=" bottom-0 start-0 end-0 px-3">
             <div class="row px-3 px-2" style="font-size:14px">
                 <div class="col-sm-6 my-3 mt-5 text-start">
                     <div class="mb-2">
@@ -92,8 +92,8 @@
                     <p class="mb-0"><span class="text-navy">Correo:</span> atencionalcddno.seta@gmail.com</p>
                 </div>
 
-                <div class="col-sm-6 mb-0 pb-0 d-flex align-items-end">
-                    <div class="d-flex pb-3 w-100 justify-content-center text-center align-items-center">
+                <div class="col-sm-6 mb-0 pb-0 d-flex justify-content-center align-items-end">
+                    <div class="d-flex pb-3 justify-content-center text-center align-items-center">
                         <img src="img/gobierno.png" alt="" class="ps-2" width="150px">
                         <img src="img/aragua.png" class="border-end ps-2 pe-2" alt="" width="85px">
                         <img src="img/logoKC.png" alt="" class="mt-3 ms-2" width="100px">
